home and Landing page AlignMent corrected,some minor change in contact page

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -4,15 +4,15 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
-  body {
-    background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
-    font-size: 12px;
+  .body {
+    background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%); 
+   font-size: 12px; 
   }
   
-  body, button, input {
+  .body, button, input {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    letter-spacing: 1.4px;
+    letter-spacing: 1.px;
   }
   
   .background {
